# Proyecto1-Datos2

./: .gitignore  CMakeLists.txt  TrackList.cpp  TrackList.h  csv.cpp  csv.h  list.cpp  list.h  main.cpp  songManagement.h  window.cpp  window.h
ArtistManager/: artistList.cpp  artistList.h
ArtistManager/html/: annotated.html  artist_list_8cpp.html  artist_list_8cpp__incl.map  artist_list_8cpp__incl.md5  artist_list_8h.html  artist_list_8h__dep__incl.map  artist_list_8h__dep__incl.md5  artist_list_8h__incl.map  artist_list_8h__incl.md5  artist_list_8h_source.html  class_artist_list-members.html  class_artist_list.html  class_artist_list__coll__graph.md5  class_artist_list__inherit__graph.map  classes.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html
ArtistManager/latex/: annotated.tex  artist_list_8cpp.tex  artist_list_8cpp__incl.md5  artist_list_8h.tex  artist_list_8h__incl.md5  (+6 more)
CSV Files/: checksums  raw_artists2.csv  raw_artists_new.csv
GUIManager/: window.cpp  window.h
ListItemManager/: listItemFactory.cpp  listItemFactory.h
MemoryManager/: RAMManagement.cpp  RAMManagement.h
PaginateManager/: paginateObserver.cpp  paginateObserver.h
PlaySongManager/: songManagement.cpp  songManagement.h
SongManager/: trackList.cpp  trackList.h
html/: _c_make_lists_8txt.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5
latex/: main_8cpp.tex  main_8cpp__incl.md5  refman.tex
(+293 files in other folders)
